# raytracingV0

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
res/: sphere.ppm
src/: main.cpp  raytracing.h
src/core/: defines.h  logger.h  window.cpp  window.h
src/input/: joystick.cpp  joystick.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
src/math/: interval.h  pixel.h  vector.h
src/object/: object.h  objectList.h  sphere.h
src/output/: image.cpp  image.h
src/ray/: camera.h  ray.h
